--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -8,12 +8,19 @@
 @import './utilities.scss';
 @import './typography.scss';
 
-@import './container.scss';
+@import 'components/container';
 @import './grid.scss';
-@import './button.scss';
+@import './components/button.scss';
 @import './forms.scss';
-@import './navbar.scss';
-@import './carousel.scss';
+@import './components/header.scss';
+@import './components/footer.scss';
+@import './components/navbar.scss';
+@import './components/carousel.scss';
+
+@import 'components/gallery-image-preview';
+@import './components/spinner.scss';
+@import './components/card.scss';
+@import './components/alert.scss';
 
 :root {
     --color-primary: #F72684;
@@ -34,6 +41,8 @@
 
     --gutter-x: 1rem;
     --gutter-y: 1rem;
+
+    --border-radius: 5px;
 }
 
 html {
@@ -58,36 +67,6 @@ a {
     margin: 1rem 0;
 }
 
-.header {
-    font-weight: 700;
-    text-transform: uppercase;
-    background-color: var(--header-bg-color);
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 10%;
-    z-index: -2;
-
-    &.sticky {
-        position: sticky;
-        width: 100%;
-        top: 0;
-        z-index: 99;
-    }
-}
-
-.footer {
-    text-transform: uppercase;
-    background-color: var(--bg-dark);
-    color: var(--text-white);
-    text-align: center;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 body {
     position: relative;
     min-height: 100%;
@@ -97,58 +76,6 @@ body {
 .link {
     color: var(--color-primary);
 }
-
-.corner-small {
-    border-radius: 5px;
-}
-
-.card {
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.card-header {
-    border-radius: 10px 10px 0 0;
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-    height: 40%;
-}
-
-.card-body {
-    border-radius: 0 0 10px 10px;
-    background-color: var(--bg-white);
-    height: 60%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding: 2rem 3.5rem;
-}
-
-.card-title {
-    text-transform: uppercase;
-}
-
-.card-text {
-    color: var(--text-light);
-}
-
-.card-small {
-    display: flex;
-    height: 200px;
-    width: 100%;
-    border-radius: 10px;
-    background-position: center;
-    background-size: cover;
-}
-
 
 #map {
     height: calc(100vh - 100px);
@@ -161,7 +88,7 @@ body {
 #admin-map {
     height: 200px;
     width: 100%;
-    border-radius: 5px;
+    border-radius: var(--border-radius);
 }
 
 .mapcluster {
@@ -178,55 +105,14 @@ body {
 }
 
 .jumbotron {
-    // background: url('/images/jumbotron.png');
-    // background-position: center;
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    background-color: var(--bg-dark);
-    color: var(--bg-white);
     width: 100%;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 3rem;
+    text-align: center;
+    background-color: var(--bg-dark);
+    color: var(--text-white);
+    padding: 2rem 0;
     text-transform: uppercase;
 
     > * {
         color: inherit;
-    }
-}
-
-//.tab-content {
-//
-//    > * {
-//        display: none;
-//
-//        &.active {
-//            display: block;
-//        }
-//    }
-//}
-
-.spinner {
-    position: relative;
-    display: block;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    background-color: transparent;
-    border: 3px solid var(--color-primary);
-    border: 3px solid var(--color-primary);
-    border-bottom: 3px solid transparent;
-    animation: spinner 1s infinite linear;
-}
-
-@keyframes spinner {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
     }
 }
