--- a/resources/scss/forms.scss
+++ b/resources/scss/forms.scss
@@ -6,11 +6,11 @@
 
 .form-input {
     border: solid 1px #E1E1E1;
-    border-radius: 5px;
+    border-radius: var(--border-radius);
     padding: 0.5rem;
     width: 100%;
     margin-bottom: 0.5rem;
-    resize: none;
+    resize: vertical;
     font-size: 0.7rem;
 }
 
@@ -21,23 +21,21 @@
 
 .input-list {
     position: relative;
-
-    //.form-input {
-    //    margin: 0;
-    //    border-radius: 5px 5px 0 0;
-    //    border-bottom: 0;
-    //}
 }
 
 .autocomplete {
     background-color: white;
     border: solid 1px #E1E1E1;
     border-top: 0;
-    border-radius: 0 0 5px 5px;
+    border-radius: 0 0 var(--border-radius) var(--border-radius);
     padding: 0.8rem 0;
     display: flex;
     flex-direction: column;
     margin-top: -10px;
+
+    &.hidden {
+        display: none;
+    }
 
     > * {
         flex: 1;
@@ -55,4 +53,8 @@
             }
         }
     }
+}
+
+textarea {
+    min-height: 10rem;
 }
