--- a/resources/scss/variables.scss
+++ b/resources/scss/variables.scss
@@ -10,10 +10,16 @@ $grid-breakpoints: (
 $grid-columns: 12;
 
 //$spacer: 1rem;
-//
-//$spacers: (
-//    1: $spacer,
-//    2: $spacer * 2,
-//)
+
+$spacing: (
+    0: 0,
+    1: 0.125rem,
+    2: 0.25rem,
+    3: 0.5rem,
+    4: 0.625rem,
+    5: 0.75rem,
+    6: 0.875rem,
+    7: 1rem,
+)
 
 
