--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -37,6 +37,9 @@
     /* Header */
     --header-bg-color: var(--bg-white);
 
+    /* Top Button */
+    --bg-top-btn: var(--color-primary);
+
     --spacer-color: #E5E5E5;
 
     --gutter-x: 1rem;
@@ -48,6 +51,7 @@
 html {
     height: 100%;
     font-size: 16px;
+    scroll-behavior: smooth;
 }
 
 * {
@@ -75,10 +79,6 @@ body {
 
 .link {
     color: var(--color-primary);
-}
-
-#map {
-    height: calc(100vh - 100px);
 }
 
 #location-selector {
@@ -109,10 +109,190 @@ body {
     text-align: center;
     background-color: var(--bg-dark);
     color: var(--text-white);
-    padding: 2rem 0;
+    padding: 3rem 0;
     text-transform: uppercase;
 
     > * {
         color: inherit;
+    }
+}
+
+.overlay {
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.2;
+}
+
+.hero_video {
+    border-radius: 5px;
+    position: relative;
+    overflow: hidden;
+
+
+
+    .content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        color: var(--text-white);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        text-shadow: 1px 1px 1px black;
+
+        //> * {
+        //    color: inherit;
+        //}
+
+        h1 {
+            font-family: 'Bai Jamjuree', sans-serif;
+            font-size: 3rem;
+        }
+    }
+}
+
+#home_video {
+    width: 100%;
+    height: 30vw;
+    object-fit: cover;
+}
+
+.home_container {
+    &:not(:first-child) {
+        margin-top: 1rem;
+    }
+}
+
+/////// CARTE
+
+.map-container {
+    display: flex;
+    width: 100%;
+    height: calc(100vh - 100px);
+}
+
+#map {
+    position: relative;
+    flex: 1;
+    //width: 100%;
+    //width: auto;
+    height: 100%;
+}
+
+.map-popup {
+    width: 0;
+    height: 100%;
+    background-color: var(--bg-white);
+    transition: 0.3s;
+
+    &.active {
+        width: 40%;
+    }
+
+    &-image {
+        display: block;
+        width: 95%;
+        //height: 250px;
+        height: 40vh;
+        object-fit: cover;
+        margin: 0 auto;
+        border-radius: 10px;
+    }
+
+    &-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem;
+
+        &-title {
+            margin: 0;
+        }
+
+        &-description {
+            margin: 1rem 0;
+        }
+    }
+
+    &-close {
+        cursor: pointer;
+        width: 25px;
+        height: 25px;
+        //padding: 0.1rem;
+        border-radius: 1rem;
+        background-color: var(--bg-white);
+        color: var(--color-primary);
+        border: 1px solid var(--color-primary);
+    }
+}
+
+.sponsor-container {
+    padding: 1rem;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.sponsor-link {
+
+}
+
+.sponsor-logo {
+    width: 150px;
+    object-fit: cover;
+}
+
+// PAGINATION
+
+.pagination-container {
+    margin: 0 auto;
+}
+
+.pagination {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    .pagination-item {
+
+    }
+
+    &-prev {
+        margin-right: 0.5rem;
+    }
+
+    &-next {
+        margin-left: 0.5rem;
+    }
+
+    &-link {
+        background: var(--color-primary);
+        color: var(--text-white);
+        padding: 5px 10px;
+        border-radius: 2px;
+
+        &.active {
+            //border: 2px solid var(--color-primary) ;
+            background: var(--bg-white);
+            color: var(--color-primary);
+        }
+    }
+}
+
+.hover-zoom {
+    transition: 200ms ease-in-out;
+
+    &:hover {
+        transform: scale(1.025);
     }
 }
