--- a/resources/scss/components/card.scss
+++ b/resources/scss/components/card.scss
@@ -1,13 +1,15 @@
 .card {
+    position: relative;
     overflow: hidden;
     background-position: center;
     background-size: cover;
     border-radius: 10px;
-    height: 400px;
+    //height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex: 1 1 auto;
 }
 
 .card-header {
