--- a/resources/scss/forms.scss
+++ b/resources/scss/forms.scss
@@ -9,9 +9,13 @@
     border-radius: var(--border-radius);
     padding: 0.5rem;
     width: 100%;
-    margin-bottom: 0.5rem;
+    //margin-bottom: 0.5rem;
     resize: vertical;
     font-size: 0.7rem;
+}
+
+.form-input-group {
+    display: flex;
 }
 
 .required::after {
