--- a/resources/scss/typography.scss
+++ b/resources/scss/typography.scss
@@ -55,7 +55,8 @@ a {
     text-align: center;
     word-spacing: 150%;
     line-height: 150%;
-    padding: 0 15%;
     margin-bottom: 2rem;
     font-size: 0.9rem;
+    width: min(90%, 600px);
+    margin-inline: auto;
 }
